[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-chronomancer"
version = "0.1.0"
description = "A focused Python library for precise duration representation, decomposition, and highly customizable compiled formatting."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Selia Rena" }
]
keywords = [
    "duration",
    "timedelta",
    "time",
    "formatting",
    "formatter",
    "time-units",
    "normalization",
    "chrono"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/SeliaRena/Chronomancer"
Repository = "https://github.com/SeliaRena/Chronomancer"
Issues = "https://github.com/SeliaRena/Chronomancer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chronomancer"]